# simpli-sentiment

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/simpli_sentiment/: __init__.py  app.py  cli.py  settings.py
tests/: test_app.py  test_cli.py  test_ingest.py
