[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpli-sentiment"
version = "0.1.0"
description = "Customer health and sentiment tracker that detects escalation risk and measures emotional trajectory"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "typer>=0.15",
    "pydantic>=2.10",
    "httpx>=0.28",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "transformers>=4.46",
    "spacy>=3.8",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "redis>=5.2",
    "torch>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
simpli-sentiment = "simpli_sentiment.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
